styles/widgets/base/scheduler.less
/* ... */
.dx-scheduler-appointment-focused-mixin() {
    &.dx-state-focused {
        .box-shadow(none);

        &:before {
            pointer-events: none;
            content: "";
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
        }
    }
}
// T314382
.dx-scheduler-appointment-focused-mixin() when (@SCHEDULER_FILL_FOCUSED_APPOINTMENT = true) {
    &.dx-state-focused {
        background-color: @SCHEDULER_APPOINTMENT_START_COLOR;
    }
}
// T314382
.dx-scheduler-appointment-focused-mixin() when not (@SCHEDULER_FILL_FOCUSED_APPOINTMENT = true) {
    &.dx-state-focused {
        &:before {
            background-color: @SCHEDULER_APPOINTMENT_START_COLOR;
            opacity: .98;
        }
    }
}

.dx-scheduler-fixed-appointments {
    z-index: 100;
    position: absolute;
    left: @SCHEDULER_LEFT_COLUMN_WIDTH;

    .dx-scheduler-small & {
        left: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
    }
}

.dx-scheduler-header {
    position: relative;
    z-index: 1;
    width: 100%;
}

.dx-scheduler-navigator {
    float: left;
    padding-left: @SCHEDULER_NAVIGATOR_OFFSET;
    white-space: nowrap;

    .dx-device-mobile & {
        padding-left: @SCHEDULER_NAVIGATOR_OFFSET * 0.5;
    }

    min-width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH;
    max-width: 40%;
}

.dx-scheduler-navigator-caption {
    width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH;
    min-width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH * 0.6;
    max-width: 80%;

    .dx-device-mobile & {
        width: @SCHEDULER_MOBILE_NAVIGATOR_CAPTION_WIDTH;
    }
}

.dx-calendar.dx-scheduler-navigator-calendar {
    width: 100%;
    height: 100%;
}

.dx-scheduler-view-switcher.dx-tabs {
    max-width: 52%;
    min-width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH * 0.4;
    width: auto;
    float: right;
    height: 100%;
    border: none;

    .dx-scheduler-small & {
        display: none;
    }

    .dx-tabs-scrollable .dx-tabs-wrapper {
        border-bottom: none;
    }

    .dx-tab {
        width: @SCHEDULER_SWITCHER_TAB_WIDTH;

        &.dx-tab-selected:before {
            position: absolute;
            bottom: -2px;
            width: 100%;
            height: 2px;
            content: '';
            right: 0;
        }

        &.dx-state-focused:after {
            border-bottom: none;
        }
    }
}

.dx-scheduler-view-switcher.dx-dropdownmenu.dx-button {
    position: absolute;
    right: @SCHEDULER_SWITCHER_OFFSET;
}

.dx-scheduler-view-switcher-label {
    position: absolute;
}

.dx-scheduler-view-switcher-reduced {
    table-layout: auto;

    &.dx-tabs {
        .dx-tab {
            width: auto;
            height: @SCHEDULER_DEFAULT_HEADER_HEIGHT;
        }
    }

    .dx-tabs-wrapper {
        height: @SCHEDULER_DEFAULT_HEADER_HEIGHT;
    }
}

.dx-scheduler-appointment-content-allday {
    display: none;
}

.dx-scheduler-header-panel-cell.dx-scheduler-header-panel-current-time-cell {
    color: @SCHEDULER_CURRENT_TIME_CELL_COLOR;
    &:before {
            position: absolute;
            top: @SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT - @SCHEDULER_CURRENT_TIME_CELL_BORDER_SIZE - 1;
            right: 0;
            width: 100%;
            height: @SCHEDULER_CURRENT_TIME_CELL_BORDER_SIZE;
            content: '';
            background-color: @SCHEDULER_TIME_INDICATOR_COLOR;
        }
}

.dx-scheduler-date-time-shader-all-day {
    margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
    width: 100%;
    background-color: @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR;
    position: absolute;
    pointer-events: none;
}

.dx-scheduler-date-time-indicator {
        background-color:  @SCHEDULER_TIME_INDICATOR_COLOR;
        position: absolute;
        pointer-events: none;
        .box-shadow(@SCHEDULER_TIME_INDICATOR_SHADOW);

        &:before {
            font-size: @SCHEDULER_TIME_INDICATOR_FONT_SIZE;
            color: @SCHEDULER_TIME_INDICATOR_COLOR;
            position: absolute;
            z-index: 1000;
            margin-top: -@SCHEDULER_TIME_INDICATOR_TOP;
            margin-left: -@SCHEDULER_TIME_INDICATOR_LEFT;
            .text-shadow(@SCHEDULER_TIME_INDICATOR_TEXT_SHADOW);
        }
}

.dx-scheduler-date-time-shader {
    pointer-events: none;
}

.dx-scheduler-work-space-week, 
.dx-scheduler-work-space-work-week,
.dx-scheduler-work-space-day {
    .dx-scheduler-date-time-indicator {
        margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
        height: @SCHEDULER_TIME_INDICATOR_SIZE;
        .dx-icon-spinright;

        .dx-scheduler-small & {
            margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
        }
    }

    .dx-scheduler-date-time-shader{
        margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
    }

    .dx-scheduler-date-time-shader-top,
    .dx-scheduler-date-time-shader-bottom {
         &:before {
             width: inherit;
             height: inherit;
             content: "";
             left: inherit;
             position: absolute;
             margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
             background-color:  @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR;
         }
    }

    &.dx-scheduler-work-space-both-scrollbar {
        .dx-scheduler-date-time-shader,
        .dx-scheduler-date-time-indicator,
        .dx-scheduler-date-time-shader-all-day {
            margin-left: 0;
        }

        .dx-scheduler-date-time-shader-top,
        .dx-scheduler-date-time-shader-bottom {
            &:before {
                margin-left: 0;
            }
        }

    }

    &.dx-rtl {
        .dx-scheduler-date-time-indicator {
            margin-left: 0;
            .dx-icon-spinleft;

             &:before {
                margin-right: @SCHEDULER_TIME_INDICATOR_LEFT;
            }
        }

        .dx-scheduler-date-time-shader-top,
        .dx-scheduler-date-time-shader-bottom {
            &:before {
                margin-left: 0;
            }
        }
    }
}
/* ... */

